--- a/src/components/InventoryItem.css
+++ b/src/components/InventoryItem.css
@@ -1,12 +1,11 @@
 .inventory-item {
-    border: 1px solid #317cd1;
-    border-radius: 5px;
+    border: 2px solid #aed131;
+    border-radius: 8px;
     padding: 15px;
     margin: 10px;
     width: 250px;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
     transition: transform 0.2s;
-    background-color: #f8f7ed;
 }
 
 .inventory-item:hover {
@@ -19,3 +18,12 @@
     color: #333;
 }   
 
+.product-image {
+    width: 100%;
+    height: 100%;
+    border-radius: 5px;
+    margin-bottom: 10px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
