--- a/src/pages/ProductDetail.css
+++ b/src/pages/ProductDetail.css
@@ -1,9 +1,31 @@
 .product-image {
-    width: 50%;
+    max-width: 100%;
+    width: 300px;
     height: auto;
     border-radius: 8px;
     margin-bottom: 15px;
     display: block;
     margin-left: auto;
     margin-right: auto;
+}
+
+.product-details {
+    text-align: center;
+    font-size: 1.1em;
+    color: #555;
+}
+
+#add-to-cart-btn {
+    background-color: #aed131;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 1em;
+    transition: background-color 0.3s;
+}
+
+#add-to-cart-btn:hover {
+    background-color: #8bbf1a;
 }
