--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,5 +1,5 @@
 .header {
-    background-color: #f8f8f8;
+    height: 300px;
     text-align: center;
     padding: 20px;
     background: #22C1C3;
@@ -22,3 +22,4 @@
     margin-top: 10px;
     
 }
+
