--- a/src/components/InventoryItem.css
+++ b/src/components/InventoryItem.css
@@ -19,11 +19,12 @@
 }   
 
 .product-image {
-    width: 100%;
-    height: 100%;
+    width: 200px;
+    height: 200px;
     border-radius: 5px;
     margin-bottom: 10px;
     display: block;
     margin-left: auto;
     margin-right: auto;
+    object-fit: cover;
 }
