--- a/src/pages/ProductDetail.css
+++ b/src/pages/ProductDetail.css
@@ -1,18 +1,13 @@
 .product-image {
     max-width: 100%;
     width: 300px;
-    height: auto;
+    height: 300px;
     border-radius: 8px;
     margin-bottom: 15px;
     display: block;
     margin-left: auto;
     margin-right: auto;
-}
-
-.product-details {
-    text-align: center;
-    font-size: 1.1em;
-    color: #555;
+    object-fit: cover;
 }
 
 #add-to-cart-btn {
