--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,7 +1,7 @@
 .header {
     height: 300px;
+    padding-top: 10px;
     text-align: center;
-    padding: 20px;
     background: #22C1C3;
     background: linear-gradient(0deg, rgba(34, 193, 195, 1) 0%, rgba(253, 187, 45, 1) 100%);
 }
