--- a/src/components/InventoryItem.css
+++ b/src/components/InventoryItem.css
@@ -19,12 +19,11 @@
 }   
 
 .product-image {
-    width: 200px;
-    height: 200px;
+    width: 100%;
+    height: 100%;
     border-radius: 5px;
     margin-bottom: 10px;
     display: block;
     margin-left: auto;
     margin-right: auto;
-    object-fit: cover;
 }
