--- a/src/pages/ProductDetail.css
+++ b/src/pages/ProductDetail.css
@@ -1,13 +1,18 @@
+.main-content {
+    font-family: 'Arial, sans-serif';
+    border-radius: 10px;
+    padding: 20px;
+}
+
 .product-image {
     max-width: 100%;
     width: 300px;
-    height: 300px;
+    height: auto;
     border-radius: 8px;
     margin-bottom: 15px;
     display: block;
     margin-left: auto;
     margin-right: auto;
-    object-fit: cover;
 }
 
 #add-to-cart-btn {
@@ -19,8 +24,12 @@
     cursor: pointer;
     font-size: 1em;
     transition: background-color 0.3s;
+    position: relative;
+    z-index: 10;
 }
 
 #add-to-cart-btn:hover {
     background-color: #8bbf1a;
+    position: relative;
+    z-index: 10;
 }
